src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Forecast_Value__c</fullName>
        <formula>CASE(Z_Forecast_Category__c,
           &apos;Omitted&apos;,0,
           &apos;Pipeline&apos;,0.5,
	   &apos;Best Case&apos;,0.8,
	   &apos;Commit&apos;,1,
	   &apos;Closed&apos;,1,
           0
)*Weighted_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Comments__c</fullName>
        <label>Funding Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GM_Target_Acheived__c</fullName>
        <formula>IF(AND( Pricebook2.Name  &lt;&gt; &apos;Perform Price Book&apos;,GrossMargin__c  &gt;= 50, Third_Party_GM__c  &gt;= 25.00),&quot;True&quot;,
IF(AND( Pricebook2.Name  &lt;&gt; &apos;Perform Price Book&apos;,GrossMargin__c &gt;= 50, Total_Third_Party__c = 0.00),&quot;True&quot;,
IF(AND( Pricebook2.Name  = &apos;Perform Price Book&apos;,GrossMargin__c &gt;= 70,Third_Party_GM__c &gt;= 25),&quot;True&quot;,
IF(AND( Pricebook2.Name  = &apos;Perform Price Book&apos;,GrossMargin__c &gt;= 70, Total_Third_Party__c = 0.00),&quot;True&quot;,
If(AND( GrossMargin__c &lt;= 50,Third_Party_GM__c &lt; 25, Third_Party_GM__c &gt; 0),&quot;False&quot;,&quot;False&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM Target Acheived</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Amount__c</fullName>
        <label>Grant Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Green_Team_Date__c</fullName>
        <label>Green Team Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GrossMargin__c</fullName>
        <formula>Gross_Margin__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrossMargin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <inlineHelpText>Overall quote Gross Margin calculation</inlineHelpText>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Have_we_engaged_the_committee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have we engaged the committee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Host_Agency_Acknowledgement_Form_Complet__c</fullName>
        <label>Host Acknowledgement Form Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Host_Agency_Acknowledgement_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Host Acknowledgement Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INTERNAL_Note_to_Approvers__c</fullName>
        <inlineHelpText>Enter any applicable notes to approvers to assist them in approving your quote.</inlineHelpText>
        <label>INTERNAL Note to Approvers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Identified_Pre_Go_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Zuercher Opps Only</description>
        <label>Identified Pre-Go Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_Committee_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identify Committee Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Closed_Other_State_Reason__c</fullName>
        <label>If Closed Other - State Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost Budget</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Project Cancelled</fullName>
                </value>
                <value>
                    <fullName>Upgrade with Current Vendor</fullName>
                </value>
                <value>
                    <fullName>Consolidation</fullName>
                </value>
                <value>
                    <fullName>Duplicate Quote</fullName>
                </value>
                <value>
                    <fullName>No Real Opportunity</fullName>
                </value>
                <value>
                    <fullName>Budgetary Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_No_Bid_Primary_Reason__c</fullName>
        <label>If No Bid - Primary Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presales</fullName>
                </value>
                <value>
                    <fullName>Competitive Spec</fullName>
                </value>
                <value>
                    <fullName>Fit</fullName>
                </value>
                <value>
                    <fullName>Compliancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Definition_Review_Date__c</fullName>
        <label>Implementation Definition Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Fees__c</fullName>
        <label>Implementation Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incumbent_to_be_Replaced__c</fullName>
        <inlineHelpText>Enter the current competitor&apos;s company name that we are replacing.</inlineHelpText>
        <label>Incumbent to be Replaced</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS Software, LLC</fullName>
                </value>
                <value>
                    <fullName>911-Inc.</fullName>
                </value>
                <value>
                    <fullName>ACS-Firehouse</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>AeroMed Software</fullName>
                </value>
                <value>
                    <fullName>Agisent</fullName>
                </value>
                <value>
                    <fullName>Alert Public Safety Solutions (APSS)</fullName>
                </value>
                <value>
                    <fullName>Allegheny R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Alpine Software</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMCAD</fullName>
                </value>
                <value>
                    <fullName>AngelTrack</fullName>
                </value>
                <value>
                    <fullName>Application Data Systems Inc. (ADSi)</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>ARMMS</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Beyond Lucid Technologies</fullName>
                </value>
                <value>
                    <fullName>Bighorn Systems</fullName>
                </value>
                <value>
                    <fullName>BIO-Key</fullName>
                </value>
                <value>
                    <fullName>BIS</fullName>
                </value>
                <value>
                    <fullName>Blue Diamond</fullName>
                </value>
                <value>
                    <fullName>Bradshaw Consulting</fullName>
                </value>
                <value>
                    <fullName>Caliber/Global</fullName>
                </value>
                <value>
                    <fullName>Caliber/InterAct</fullName>
                </value>
                <value>
                    <fullName>Caliber/Sleuth</fullName>
                </value>
                <value>
                    <fullName>Caliber/TAC.10</fullName>
                </value>
                <value>
                    <fullName>CallWorx</fullName>
                </value>
                <value>
                    <fullName>Capers</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_RFP_Link_1__c</fullName>
        <label>Internal RFP Link_1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_RFP_Link__c</fullName>
        <inlineHelpText>Internal only link to the proposal folder containing the RFP files</inlineHelpText>
        <label>Internal RFP Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Internal_RFP_Location_Link__c</fullName>
        <formula>HYPERLINK(&quot;file://&quot;&amp;Internal_RFP_Location__c,&quot;Internal RFP Location Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal RFP Location Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_RFP_Location__c</fullName>
        <label>Internal RFP Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jail_Beds__c</fullName>
        <formula>Account.Jail_Beds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jail Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Date__c</fullName>
        <description>Quote&apos;s last approval date</description>
        <label>Last Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Target_Opportunity__c</fullName>
        <label>Last Modified (Target Opportunity)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Rejection_Date__c</fullName>
        <description>Quote&apos;s last rejection date</description>
        <label>Last Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Stage__c</fullName>
        <label>Legacy Stage</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Zuercher_Created_By__c</fullName>
        <label>Legacy Zuercher Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Zuercher_Created_Date_Time__c</fullName>
        <label>Legacy Zuercher Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Letter_of_Intent_Due_Date__c</fullName>
        <label>Letter of Intent Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_of_Intent_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Intent Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <description>Syncs over from Endeavor</description>
        <label>Monthly Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Approval_Level__c</fullName>
        <label>Most Recent Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFO/CEO Approved</fullName>
                </value>
                <value>
                    <fullName>COO/CFO/CEO Approved</fullName>
                </value>
                <value>
                    <fullName>COO Approved</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Finance Approved</fullName>
                </value>
                <value>
                    <fullName>Green Team Approved</fullName>
                </value>
                <value>
                    <fullName>Hardware and 3rd Party Approved</fullName>
                </value>
                <value>
                    <fullName>Operations Approved</fullName>
                </value>
                <value>
                    <fullName>PdM Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Quote Approved - Final</fullName>
                </value>
                <value>
                    <fullName>Quote Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Sales Director Approved</fullName>
                </value>
                <value>
                    <fullName>Sales Support Approved</fullName>
                </value>
                <value>
                    <fullName>Sr. VP of Sales Approved</fullName>
                </value>
                <value>
                    <fullName>VP of Sales Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Grant_Program_s__c</fullName>
        <label>Name of Grant Program(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Contract_Required__c</fullName>
        <description>Corresponding field created in Endeavor in the basket - will sync over from Endeavor</description>
        <label>New Contract Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>New Child Account</fullName>
                </value>
                <value>
                    <fullName>Existing Customer - Upgrade</fullName>
                </value>
                <value>
                    <fullName>Existing Customer - New/Additional System</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_INTERNAL_Notes_to_Approvers__c</fullName>
        <label>New INTERNAL Notes to Approvers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Synopsis_Modified_By__c</fullName>
        <description>Populated by workflow based on who last modified the Next Steps field
Workflow: https://na6.salesforce.com/01Q80000000DQhU</description>
        <label>Next Steps/Synopsis Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Synopsis_Modified_Date__c</fullName>
        <description>Updates the date that the Next Steps field was modified via workflow:  https://na6.salesforce.com/01Q80000000N8c7</description>
        <label>Next Steps/Synopsis Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Bid_Letter_Required_Date__c</fullName>
        <label>No Bid Letter Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Bid_Letter_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Bid Letter Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Electronic_Copies_Required__c</fullName>
        <label>Number of Electronic Copies Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Hard_Copies_Required__c</fullName>
        <label>Number of Hard Copies Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sworn_Officers__c</fullName>
        <formula>Account.Number_of_Sworn_Personnel_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Sworn Officers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Discovery_Date__c</fullName>
        <label>On-Site Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Email__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Phone__c</fullName>
        <formula>Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityURL__c</fullName>
        <formula>LEFT( $Api.Partner_Server_URL_230 , FIND(&apos;services/Soap/c/23.0&apos;, $Api.Enterprise_Server_URL_230) -1) &amp;   Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Long_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Percent__c</fullName>
        <label>Opportunity Owner Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reached_Forcast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks Box if the opportunity ever hits or exceeds 40%</description>
        <label>Reached Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_URL__c</fullName>
        <formula>LEFT( $Api.Partner_Server_URL_230 , FIND(&apos;services/Soap/c/23.0&apos;, $Api.Enterprise_Server_URL_230) -1) &amp;   Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Budget__c</fullName>
        <label>Original Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_Bond_Percentage__c</fullName>
        <label>Performance Bond Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Bond_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Bond Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed_On_Site_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed On-Site Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed_On_Site_Discovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed On-Site Discovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prepaid_Subscriptions__c</fullName>
        <label>Prepaid Subscriptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <inlineHelpText>Choose the appropriate price book for the quote associated with this opportunity.</inlineHelpText>
        <label>Price Book</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
                <value>
                    <fullName>Rapid Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Quote_Contact_Name__c</fullName>
        <formula>Text(Primary_Quote_Contact__r.Salutation) &amp; &quot; &quot; &amp; Primary_Quote_Contact__r.FirstName &amp; &quot; &quot; &amp; Primary_Quote_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quote Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Quote_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter primary contact for your quote. This contact will be referenced on quote template output.</inlineHelpText>
        <label>Primary Quote Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Primary Quote Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Procurement_Plans__c</fullName>
        <label>Procurement Plans</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Procurement_Type__c</fullName>
        <label>Procurement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>Sole-Source</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_WMP__c</fullName>
        <inlineHelpText>Please enter the product family being proposed in the opportunity.</inlineHelpText>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ETI Hosted</fullName>
                </value>
                <value>
                    <fullName>ETI On Premise</fullName>
                </value>
                <value>
                    <fullName>Impact</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Insight</fullName>
                </value>
                <value>
                    <fullName>IP911</fullName>
                </value>
                <value>
                    <fullName>LETG</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
                <value>
                    <fullName>TT911</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Required__c</fullName>
        <inlineHelpText>For Inform quotes, please choose all products that apply to this Opportunity</inlineHelpText>
        <label>Product(s) Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>911 Consulting</fullName>
                </value>
                <value>
                    <fullName>Accident Reporting (Extend)</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Data Vault</fullName>
                </value>
                <value>
                    <fullName>DispatchNow</fullName>
                </value>
                <value>
                    <fullName>eCitations (Extend)</fullName>
                </value>
                <value>
                    <fullName>FBR</fullName>
                </value>
                <value>
                    <fullName>FBR (Extend)</fullName>
                </value>
                <value>
                    <fullName>Field Ops</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Fire Records</fullName>
                </value>
                <value>
                    <fullName>GIS Services</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Insight AVL</fullName>
                </value>
                <value>
                    <fullName>Insight Dispatch</fullName>
                </value>
                <value>
                    <fullName>Insight Mobile</fullName>
                </value>
                <value>
                    <fullName>IQ/Analytics</fullName>
                </value>
                <value>
                    <fullName>IQResponse</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Jail Extend</fullName>
                </value>
                <value>
                    <fullName>LETG Add On</fullName>
                </value>
                <value>
                    <fullName>LETG eCitations</fullName>
                </value>
                <value>
                    <fullName>Mapping (Zuercher)</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Municipal Courts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Related_Fees__c</fullName>
        <label>Project Related Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This person owns the opportunity at the organization</inlineHelpText>
        <label>Project Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Project Sponsor)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <label>Proposal Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Proposal_Request_Received_WMP__c</fullName>
        <label>Proposal Request Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Ship_Date__c</fullName>
        <label>Proposal Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Writer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposl_Submitted_WMP__c</fullName>
        <label>Proposal Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Date__c</fullName>
        <description>Quote purchase order date</description>
        <label>Purchase Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <description>Quote purchase order number</description>
        <label>Purchase Order Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qty_of_Local_References__c</fullName>
        <label>Qty of Local References</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_of_Negative_Local_References__c</fullName>
        <label>Qty of Negative Local References</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <description>If quote number is Null, then workflow &quot;Set Quote #&quot; will populate it with the CPQ Quote Number value.  This will accommodate both legacy quote number entries and new CPQ quote number entries.</description>
        <label>Quote Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Subtotal__c</fullName>
        <description>Quote subtotal</description>
        <label>Quote Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Total__c</fullName>
        <description>Quote total with tax</description>
        <inlineHelpText>Overall quote total with tax after any adjustments</inlineHelpText>
        <label>Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RFP_Contact_Address__c</fullName>
        <label>RFP Contact Address</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Contact_Email__c</fullName>
        <label>RFP Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RFP_Contact_Number__c</fullName>
        <label>RFP Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RFP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Team_CAD_Mobile_911__c</fullName>
        <label>RFP Team - CAD/Mobile/911</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Liz Byers</fullName>
                </value>
                <value>
                    <fullName>Rebecca Webb</fullName>
                </value>
                <value>
                    <fullName>Ruth Cruz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>